--- a/style.css
+++ b/style.css
@@ -60,6 +60,11 @@ align-content: center;
   display: inline;
 }
 
+.vid {
+  align-content: center;
+  display: inline;
+}
+
 .socials {
 align-content: center;
 display: block;
