--- a/style.css
+++ b/style.css
@@ -66,3 +66,12 @@ align-content: center;
 display: block;
 
 }
+
+.video {
+  align-content: center;
+  display: block;
+  position: relative;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%,0);
+  }
